Add second page file

--- a/_posts/0000-01-02-Romata.md
+++ b/_posts/0000-01-02-Romata.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-###This is my first commited page. (With markdown)
+#This is my first commited page. 
+##With markdown
 Use the left arrow to go back!
