Add more fancy text to line 5

--- a/_posts/0000-01-02-Romata.md
+++ b/_posts/0000-01-02-Romata.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-#This is my first commited page. 
+#This is my first commited page. This text added for PR comment. 
 ##With markdown
 Use the left arrow to go back!
