Add more text to page 2

--- a/_posts/0000-01-02-Romata.md
+++ b/_posts/0000-01-02-Romata.md
@@ -4,4 +4,7 @@ title: "Welcome to our second slide!"
 ---
 #This is my first commited page. This text added for PR comment. 
 ##With markdown
+**Learning markdown syntax**
+*Italic*
+[My site on Google App Engine!](https://www.moucab.com/)
 Use the left arrow to go back!
